--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
             <h1
-              class="text-white font-weight-light text-uppercase font-weight-bold"
+              class="text-white font-weight-light text-uppercase font-weight-bold text-select-none"
               data-aos="fade-up"
             >
               Сайт Ивана!
             </h1>
-            <p class="mb-5 text-light" data-aos="fade-up" data-aos-delay="100">
+            <p class="mb-5 text-light text-select-none" data-aos="fade-up" data-aos-delay="100">
               Группа ИДМ-20-04
             </p>
           </div>
@@ -89,7 +89,7 @@
       style="background-color: aliceblue"
     >
       <div class="container">
-        <div class="row mb-5 m-2">
+        <div class="row mb-5 m-2 text-select-none">
           <div class="text-left pb-1 border-primary mb-4">
             <h2 class="text-dark">Моя роль в команде</h2>
           </div>
@@ -129,7 +129,7 @@
       </div>
     </div>
 
-    <div class="site-section border-bottom pt-5" id="section-our-team">
+    <div class="site-section border-bottom pt-5 text-select-none" id="section-our-team">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center border-primary">
@@ -193,7 +193,7 @@
             data-aos="fade"
             data-aos-delay="300"
           >
-            <div class="person">
+            <div class="person text-select-none">
               <img
                 src="img/person.png"
                 alt="Image"
@@ -271,7 +271,7 @@
             data-aos="fade"
             data-aos-delay="300"
           >
-            <div class="card text-white bg-dark mb-3">
+            <div class="card text-white bg-dark mb-3 text-select-none">
               <a href="#" class="a-card">
                 <div class="card-header">Лабораторная 3</div>
                 <div class="card-body">
