--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,10 +27,22 @@
     >
       <nav>
         <ul>
-          <li><a href="#section-home" style="text-decoration: none;">Главная</a></li>
-          <li><a href="#section-about" style="text-decoration: none;">Обо мне</a></li>
-          <li><a href="#section-our-team" style="text-decoration: none;">Моя команда</a></li>
-          <li><a href="#section-lab" style="text-decoration: none;">Лабораторные</a></li>
+          <li>
+            <a href="#section-home" style="text-decoration: none">Главная</a>
+          </li>
+          <li>
+            <a href="#section-about" style="text-decoration: none">Обо мне</a>
+          </li>
+          <li>
+            <a href="#section-our-team" style="text-decoration: none"
+              >Моя команда</a
+            >
+          </li>
+          <li>
+            <a href="#section-lab" style="text-decoration: none"
+              >Лабораторные</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -54,7 +66,7 @@
     </nav>
   </head>
 
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="200">
+  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="200" class="text-select-none">
     <canvas id="c"></canvas>
 
     <div
@@ -68,12 +80,12 @@
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
             <h1
-              class="text-white font-weight-light text-uppercase font-weight-bold text-select-none"
+              class="text-white font-weight-light text-uppercase font-weight-bold"
               data-aos="fade-up"
             >
               Сайт Ивана!
             </h1>
-            <p class="mb-5 text-light text-select-none" data-aos="fade-up" data-aos-delay="100">
+            <p class="mb-5 text-light" data-aos="fade-up" data-aos-delay="100">
               Группа ИДМ-20-04
             </p>
           </div>
@@ -81,15 +93,13 @@
       </div>
     </div>
 
-    
-
     <div
       class="site-section pt-5 pb-3"
       id="section-about"
       style="background-color: aliceblue"
     >
       <div class="container">
-        <div class="row mb-5 m-2 text-select-none">
+        <div class="row mb-5 m-2">
           <div class="text-left pb-1 border-primary mb-4">
             <h2 class="text-dark">Моя роль в команде</h2>
           </div>
@@ -129,12 +139,16 @@
       </div>
     </div>
 
-    <div class="site-section border-bottom pt-5 text-select-none" id="section-our-team">
+    <div class="site-section border-bottom pt-5" id="section-our-team">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-light aos-init aos-animate"
-              data-aos="fade">Моя команда</h2>
+            <h2
+              class="font-weight-light text-light aos-init aos-animate"
+              data-aos="fade"
+            >
+              Моя команда
+            </h2>
           </div>
         </div>
         <div class="row text-center">
@@ -151,7 +165,9 @@
               />
               <h3 class="text-light">Анастасия Толокольникова</h3>
               <p class="position text-light">Нормоконтролер</p>
-              <p class="mb-4 text-light">Осуществляет нормоконтроль документов</p>
+              <p class="mb-4 text-light">
+                Осуществляет нормоконтроль документов
+              </p>
             </div>
           </div>
           <div
@@ -193,7 +209,7 @@
             data-aos="fade"
             data-aos-delay="300"
           >
-            <div class="person text-select-none">
+            <div class="person">
               <img
                 src="img/person.png"
                 alt="Image"
@@ -231,18 +247,21 @@
       id="section-lab"
       style="background-color: aliceblue"
     >
-    
-    <h2 class="font-weight-light text-dark aos-init aos-animate mb-5"
-              data-aos="fade">Лабораторные</h2>
+      <h2
+        class="font-weight-light text-dark aos-init aos-animate mb-5"
+        data-aos="fade"
+      >
+        Лабораторные
+      </h2>
       <div class="container">
         <div class="row mb-5 m-2 justify-content-center">
-           <div
+          <div
             class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate"
             data-aos="fade"
             data-aos-delay="300"
           >
-            <div class="card text-white bg-dark mb-3" >
-              <a href="#" class="a-card">
+            <div class="card text-white bg-dark mb-3">
+              <a href="labs/lab1.html" class="a-card">
                 <div class="card-header">Лабораторная 1</div>
                 <div class="card-body">
                   <h5 class="card-title">Здесь описание</h5>
@@ -251,12 +270,12 @@
               </a>
             </div>
           </div>
-           <div
+          <div
             class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate"
             data-aos="fade"
             data-aos-delay="300"
           >
-            <div class="card text-white bg-dark mb-3" >
+            <div class="card text-white bg-dark mb-3">
               <a href="#" class="a-card">
                 <div class="card-header">Лабораторная 2</div>
                 <div class="card-body">
@@ -266,12 +285,12 @@
               </a>
             </div>
           </div>
-           <div
+          <div
             class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate"
             data-aos="fade"
             data-aos-delay="300"
           >
-            <div class="card text-white bg-dark mb-3 text-select-none">
+            <div class="card text-white bg-dark mb-3">
               <a href="#" class="a-card">
                 <div class="card-header">Лабораторная 3</div>
                 <div class="card-body">
