added labs description

--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -31,40 +31,31 @@
       <div class="container">
         <div class="row mb-5 m-2">
           <div class="text-left pb-1 border-primary mb-4">
-            <h2 class="text-light">Моя роль в команде</h2>
+            <h2 class="text-light">Выполненные этапы лабораторной работы №1</h2>
           </div>
-          <p>
-            <strong>Тестировщик</strong> - специалист, принимающий участие в
-            тестировании компонента или системы. В его обязанность входит поиск
-            вероятных ошибок и сбоев в функционировании объекта тестирования
-            (продукта, программы, и т. д.).
-          </p>
 
           <ol>
             <li>
-              Разработка планов, графиков, методик и описания тестирования
+              Создан репозиторий на Github
             </li>
             <li>
-              Моделирование ситуаций, которые могут возникнуть в условиях
-              эксплуатации программного обеспечения
+              Создан личный веб-сайт в репозитории 
             </li>
-            <li>Выполнение тестирования программных продуктов</li>
-            <li>Выполнение нагрузочного тестирования</li>
+            <li>Сформирована команда и распределены роли</li>
+            <li>Создан план-график для проекта</li>
+            <li>Составлено техническое задание</li>
             <li>
-              Составление документации для проведения функционального
-              тестирования
+              Спроектирована структура сайта
             </li>
-            <li>Заполнение таблицы баз данных тестовыми данными</li>
-            <li>Анализ результатов, полученных во время прохождения тестов</li>
-            <li>
-              Классификация выявленных ошибок и занесение их в базу данных для
-              текущего программного продукта
-            </li>
-            <li>
-              Контроль процесса ликвидации выявленных ошибок разработчиком ПО
-            </li>
-            <li>Работа в связке с разработчиком</li>
+            <li>Создан макет сайта</li>
+            
           </ol>
+        </div>
+
+        <div class="row mb-5 m-2">
+          <div class="link-hover-solid">
+          <a href="../index.html" class="a-lab">Вернуться на главную</a>
+          </div>
         </div>
       </div>
     </div>
