--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -69,5 +69,5 @@
   ></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/1.0.0/anime.min.js"></script>
-  <script src="/../js/script.js" type="text/javascript"></script>
+  <script src="../js/script.js" type="text/javascript"></script>
 </html>
