--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Лабораторная 1</title>
 
-    <link rel="stylesheet" href="/../css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="/../css/styleSheet.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styleSheet.css" />
 
     <link
       rel="stylesheet"
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <script src="/../js/jquery-3.5.1.js"></script>
+    <script src="../js/jquery-3.5.1.js"></script>
 
     
 
