--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -47,7 +47,7 @@
             <li>
               Спроектирована структура сайта
             </li>
-            <li>Создан макет сайта</li>
+            <li><a href="https://github.com/MaiorovP/it/blob/master/images/maket.png">Создан макет сайта</a></li>
             
           </ol>
         </div>
