Added description of completed steps in the first lab

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <a href="labs/lab1.html" class="a-card">
                 <div class="card-header">Лабораторная 1</div>
                 <div class="card-body">
-                  <h5 class="card-title">Здесь описание</h5>
+                  <h5 class="card-title">21.09.2020</h5>
                   <p class="card-text">Описание лабораторной</p>
                 </div>
               </a>
@@ -276,10 +276,10 @@
             data-aos-delay="300"
           >
             <div class="card text-white bg-dark mb-3">
-              <a href="#" class="a-card">
+              <a href="labs/lab2.html" class="a-card">
                 <div class="card-header">Лабораторная 2</div>
                 <div class="card-body">
-                  <h5 class="card-title">Здесь описание</h5>
+                  <h5 class="card-title">05.10.2020</h5>
                   <p class="card-text">Описание лабораторной</p>
                 </div>
               </a>
@@ -291,10 +291,10 @@
             data-aos-delay="300"
           >
             <div class="card text-white bg-dark mb-3">
-              <a href="#" class="a-card">
+              <a href="labs/lab3.html" class="a-card">
                 <div class="card-header">Лабораторная 3</div>
                 <div class="card-body">
-                  <h5 class="card-title">Здесь описание</h5>
+                  <h5 class="card-title">19.10.2020</h5>
                   <p class="card-text">Описание лабораторной</p>
                 </div>
               </a>
