--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -36,16 +36,16 @@
 
           <ol>
             <li>
-              Создан репозиторий на Github
+              <a href="https://github.com/IvanGPN/Website">Создан репозиторий на Github</a>
             </li>
             <li>
-              Создан личный веб-сайт в репозитории 
+              <a href="https://ivangpn.github.io/Website/">Создан личный веб-сайт в репозитории</a> 
             </li>
-            <li>Сформирована команда и распределены роли</li>
+            <li><a href="../index.html#section-our-team">Сформирована команда и распределены роли</a></li>
             <li>Создан план-график для проекта</li>
             <li>Составлено техническое задание</li>
             <li>
-              Спроектирована структура сайта
+              <a href="https://github.com/MaiorovP/it/blob/master/images/maket.png">Спроектирована структура сайта</a>
             </li>
             <li><a href="https://github.com/MaiorovP/it/blob/master/images/maket.png">Создан макет сайта</a></li>
             
