--- a/labs/lab3.html
+++ b/labs/lab3.html
@@ -36,7 +36,7 @@
 
           <ol>
             <li>
-              Ничего не сделал
+              Лабораторная 3
             </li>
             
           </ol>
