--- a/labs/lab2.html
+++ b/labs/lab2.html
@@ -36,7 +36,7 @@
 
           <ol>
             <li>
-              Ничего не сделал
+              Начата работа над веб-сайтом
             </li>
             
           </ol>
