Added description of completed steps in the 2,3 labs

--- a/labs/lab1.html
+++ b/labs/lab1.html
@@ -36,18 +36,18 @@
 
           <ol>
             <li>
-              <a href="https://github.com/IvanGPN/Website">Создан репозиторий на Github</a>
+              <a href="https://github.com/IvanGPN/Website">Создание репозитория на Github</a>
             </li>
             <li>
-              <a href="https://ivangpn.github.io/Website/">Создан личный веб-сайт в репозитории</a> 
+              <a href="https://ivangpn.github.io/Website/">Создание личного веб-сайта в репозитории</a> 
             </li>
-            <li><a href="../index.html#section-our-team">Сформирована команда и распределены роли</a></li>
-            <li>Создан план-график для проекта</li>
-            <li>Составлено техническое задание</li>
+            <li><a href="../index.html#section-our-team">Формирование команды и распределение ролей</a></li>
+            <li>Создание план-графика для проекта</li>
+            <li>Составление технического задания</li>
             <li>
-              <a href="https://github.com/MaiorovP/it/blob/master/images/maket.png">Спроектирована структура сайта</a>
+              <a href="https://github.com/MaiorovP/it/blob/master/images/maket.png">Проектирование структуры сайта</a>
             </li>
-            <li><a href="https://github.com/MaiorovP/it/blob/master/images/maket.png">Создан макет сайта</a></li>
+            <li><a href="https://github.com/MaiorovP/it/blob/master/images/maket.png">Создание макета сайта</a></li>
             
           </ol>
         </div>
