--- a/labs/lab2.html
+++ b/labs/lab2.html
@@ -36,7 +36,16 @@
 
           <ol>
             <li>
-              Начата работа над веб-сайтом
+              Подготовка контента для сайта
+            </li>
+            <li>
+              Вёрстка страницы по макету
+            </li>
+            <li>
+              Разработка серверной части веб-сайта
+            </li>
+            <li>
+              Заполнение страницы контентом
             </li>
             
           </ol>
