--- a/labs/lab3.html
+++ b/labs/lab3.html
@@ -36,7 +36,10 @@
 
           <ol>
             <li>
-              Лабораторная 3
+              Оформление документа описания разработки
+            </li>
+            <li>
+              Оформление акта приемо-сдаточных испытаний
             </li>
             
           </ol>
