--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               <h3 class="text-light">Владимир Тарбаев</h3>
               <p class="position text-light">Программист</p>
               <p class="mb-4 text-light">
-                Занимается back-end и frond-end разработкой сайта
+                Занимается back-end и front-end разработкой сайта
               </p>
             </div>
           </div>
