--- a/labs/lab3.html
+++ b/labs/lab3.html
@@ -37,6 +37,13 @@
               <ol>
                 <li>Оформление документа описания разработки</li>
                 <li>Оформление акта приемо-сдаточных испытаний</li>
+                <li>
+                  <div class="link-hover-solid mr-5 mb-5">
+                    <a href="https://b24-q31o2z.bitrix24.site/preview/fc2519b53038a7d512f1ebdd4e78c250/" class="a-lab"
+                      >Ссылка на итоговый программный продукт</a
+                    >
+                  </div>
+                </li>
               </ol>
             </div>
           </div>
