--- a/index.html
+++ b/index.html
@@ -242,6 +242,90 @@
                 Занимается разработкой структуры и макета сайта
               </p>
             </div>
+            <div class="person">
+              <img
+                src="img/person.png"
+                alt="Image"
+                class="img-fluid rounded mb-5 w-75 rounded-circle"
+              />
+              <h3 class="text-light">Никита Иванов</h3>
+              <p class="position text-light">Аналитик</p>
+              <p class="mb-4 text-light">
+                Занимается аналитикой данных
+              </p>
+            </div>
+            <div class="person">
+              <img
+                src="img/person.png"
+                alt="Image"
+                class="img-fluid rounded mb-5 w-75 rounded-circle"
+              />
+              <h3 class="text-light">Антон Скворцов</h3>
+              <p class="position text-light">Аналитик</p>
+              <p class="mb-4 text-light">
+                Занимается аналитикой данных
+              </p>
+            </div>
+            <div class="person">
+              <img
+                src="img/person.png"
+                alt="Image"
+                class="img-fluid rounded mb-5 w-75 rounded-circle"
+              />
+              <h3 class="text-light">Богдан Беседин</h3>
+              <p class="position text-light">Программист</p>
+              <p class="mb-4 text-light">
+                Занимается back-end и front-end разработкой сайта
+              </p>
+            </div>
+            <div class="person">
+              <img
+                src="img/person.png"
+                alt="Image"
+                class="img-fluid rounded mb-5 w-75 rounded-circle"
+              />
+              <h3 class="text-light">Фуркат Галиулин</h3>
+              <p class="position text-light">Программист</p>
+              <p class="mb-4 text-light">
+                Занимается back-end и front-end разработкой сайта
+              </p>
+            </div>
+            <div class="person">
+              <img
+                src="img/person.png"
+                alt="Image"
+                class="img-fluid rounded mb-5 w-75 rounded-circle"
+              />
+              <h3 class="text-light">Вероника Якубова</h3>
+              <p class="position text-light">Тестировщик</p>
+              <p class="mb-4 text-light">
+                Занимается тестированием программного продукта
+              </p>
+            </div>
+            <div class="person">
+              <img
+                src="img/person.png"
+                alt="Image"
+                class="img-fluid rounded mb-5 w-75 rounded-circle"
+              />
+              <h3 class="text-light">Анастасия Семионова</h3>
+              <p class="position text-light">Дизайнер-маркетолог</p>
+              <p class="mb-4 text-light">
+                Занимается разработкой структуры и макета сайта
+              </p>
+            </div>
+            <div class="person">
+              <img
+                src="img/person.png"
+                alt="Image"
+                class="img-fluid rounded mb-5 w-75 rounded-circle"
+              />
+              <h3 class="text-light">Марина Куканова</h3>
+              <p class="position text-light">Дизайнер-маркетолог</p>
+              <p class="mb-4 text-light">
+                Занимается разработкой структуры и макета сайта
+              </p>
+            </div>
           </div>
         </div>
       </div>
